# Qt-color-widgets

./: CMakeLists.txt
gallery/: screenshot.cpp
include/QtColorWidgets/: color_dialog.hpp  gradient_list_model.hpp  harmony_color_wheel.hpp
python/: CMakeLists.txt  bindings.hpp  typesystem.xml
src/QtColorWidgets/: gradient_list_model.cpp
